# samdul08food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
pubilc/: index.html
public/: index.html
src/samdul08food/: main.py
